[package]
name = "ag-csms"
version = "0.1.0"
authors = ["Michael House <mjhouse@protonmail.com>"]
keywords = [ "arduino", "avr-hal", "moisture", "sensor", "capacitive" ]
categories = ["embedded","hardware-support"]
description = "A driver library for the Capacitive Soil Moisture Sensor v1.2"
repository = "https://github.com/mjhouse/ag-csms"
license = "GPL-3.0-or-later"
edition = "2018"
readme = "README.md"
exclude = ["media/*", "references/*"]

[dependencies]
embedded-hal = "0.2.3"

# convert to dev-dep when arduino-hal/embedded-hal have
# generic ADC/analog traits
[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "8ad1be6d95b075d13bca611d177a4cc8b9896d77"
features = ["arduino-nano"]

[dev-dependencies]
panic-halt = "0.2.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"